# HopToDesk

./: .gitignore  Cargo.toml  PKGBUILD  build-debug.bat  build.bat  build.py  build.rs  clean.bat  pacman_install
DEBIAN/: postinst  prerm
appimage/: AppImageBuilder.yml  AppImageBuilder_22.04.yml
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
flutter/: pubspec.yaml
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: common.dart  consts.dart  main.dart
flutter/lib/common/: shared_state.dart
flutter/lib/common/widgets/: chat_page.dart  dialog.dart  login.dart  overlay.dart  peer_card.dart  peer_tab_page.dart  peers_view.dart  toolbar.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_home_page.dart  desktop_setting_page.dart  install_page.dart
flutter/lib/mobile/pages/: connection_page.dart  file_manager_page.dart  home_page.dart  server_page.dart  settings_page.dart
flutter/lib/mobile/widgets/: gesture_help.dart
flutter/lib/models/: input_model.dart  model.dart  native_model.dart  peer_tab_model.dart  platform_model.dart  server_model.dart
flutter/lib/pages/: connection_page.dart  settings_page.dart
flutter/lib/utils/: image.dart  multi_window_manager.dart  platform_channel.dart
flutter/lib/widgets/: dialog.dart
libs/clipboard/src/: context_send.rs
libs/enigo/: Cargo.toml
libs/enigo/src/: lib.rs
libs/enigo/src/macos/: macos_impl.rs
libs/hbb_common/: Cargo.toml
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: api.rs  config.rs  fs.rs  lib.rs  password_security.rs
libs/hbb_common/src/platform/: mod.rs
libs/portable/src/: bin_reader.rs  main.rs
libs/scrap/: Cargo.toml
libs/scrap/examples/: capture_mag.rs
libs/scrap/src/android/: ffi.rs
libs/scrap/src/common/: codec.rs  mod.rs  record.rs  vpxcodec.rs
libs/scrap/src/dxgi/: mag.rs
libs/simple_rc/examples/: generate.rs
libs/turn/src/client/: mod.rs
libs/virtual_display/src/: lib-win7.rs
src/: cli.rs  client.rs  common.rs  core_main.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  main.rs  mobile.rs  port_forward.rs  privacy_win_mag.rs  rendezvous_mediator.rs  rendezvous_messages.rs  rendezvous_ws.rs  server.rs  tray.rs  turn_client.rs  two_factor_auth.rs  ui.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs  win_privacy.rs
src/client/: io_loop.rs
src/lang/: bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  fa.rs  fr.rs  gr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sk.rs  sl.rs  sq.rs  sr.rs  sv.rs  template.rs  th.rs  tr.rs  tw.rs  ua.rs  vn.rs
src/platform/: delegate.rs  linux.rs  linux_desktop_manager.rs  macos.mm  macos.rs  mod.rs  windows.cc  windows.rs
src/platform/privileges_scripts/: com.hoptodesk.HopToDesk_service.plist
src/server/: connection.rs  dbus.rs  input_service.rs  portable_service.rs  uinput.rs  video_service.rs  wayland.rs
src/ui/: ab.tis  cm.css  cm.rs  cm.tis  common.css  common.tis  header.tis  index.css  index.tis  install.tis  macos.rs  msgbox.tis  remote.css  remote.rs  remote.tis  win_privacy.rs
