[package]
name = "hoptodesk"
version = "1.32.4"
authors = ["hoptodesk <info@hoptodesk.com>"]
edition = "2021"
build= "build.rs"
description = "A remote control software."
default-run = "hoptodesk"
[lib]
name = "libhoptodesk"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
inline = []
packui = []
hbbs = []
cli = []
with_rc = ["simple_rc"]
appimage = []
use_samplerate = ["samplerate"]
use_rubato = ["rubato"]
use_dasp = ["dasp"]
default = ["use_dasp"]
hwcodec = ["scrap/hwcodec"]
mediacodec = ["scrap/mediacodec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.2"
scrap = { path = "libs/scrap", features = ["wayland"] }
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
repng = "0.2"
libc = "0.2"
parity-tokio-ipc = { git = "https://github.com/open-trade/parity-tokio-ipc" }
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset"] }
runas = "0.2"
magnum-opus = { git = "https://github.com/SoLongAndThanksForAllThePizza/magnum-opus" }
dasp = { version = "0.11", features = ["signal", "interpolate-linear", "interpolate"], optional = true }
rubato = { version = "0.12", optional = true }
samplerate = { version = "0.2", optional = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
clap = "3.0"
rpassword = "7.0"
base64 = "0.13"
sysinfo = "0.24"
num_cpus = "1.13"
bytes = { version = "1.2", features = ["serde"] }
default-net = "0.11.0"
wol-rs = "0.9.1"
flutter_rust_bridge = { git = "https://github.com/SoLongAndThanksForAllThePizza/flutter_rust_bridge", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
soketto = "0.7"
turn = { path = "libs/turn" }
webrtc-util = "0.5"
wake-on-lan = "0.2.0"
futures = "0.3"
qrcode = "0.12.0"
image = "^0.23"
image-base64 = "^0.1"
tempfile = "3.3.0"
md5 = "0.7.0"
errno = "0.2.8"
rdev = { git = "https://github.com/janus/rdev" }
#url = { version = "2.1", features = ["serde"] }
chrono = "0.4.23"
cidr-utils = "0.5.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features=false }
tokio-tungstenite = { version = "^0.17.2", features = ["native-tls"] }
native-tls = "0.2.10"

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
cpal = "0.13.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
machine-uid = "0.2"
mac_address = "1.1"
sciter-rs = { git = "https://github.com/open-trade/rust-sciter", branch = "dyn" }
sys-locale = "0.2"
enigo = { path = "libs/enigo", features = [ "with_serde" ] }
clipboard = { path = "libs/clipboard" }
ctrlc = "3.2"
arboard = "2.0"
#minreq = { version = "2.4", features = ["punycode", "https-native"] }
system_shutdown = "3.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
#systray = { git = "https://github.com/open-trade/systray-rs" }
trayicon = { git = "https://github.com/open-trade/trayicon-rs", features = ["winit"] }
winit = "0.26"
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10"
windows-service = "0.4"
virtual_display = { path = "libs/virtual_display" }
impersonate_system = { git = "https://github.com/21pages/impersonate-system" }
shared_memory = "0.12.4"
shutdown_hooks = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
dispatch = "0.2"
core-foundation = "0.9"
core-graphics = "0.22"
notify = "4.0.17"
include_dir = "0.7.2"
tray-item = "0.7" # looks better than trayicon

[target.'cfg(target_os = "linux")'.dependencies]
psimple = { package = "libpulse-simple-binding", version = "2.25" }
pulse = { package = "libpulse-binding", version = "2.26" }
rust-pulsectl = { git = "https://github.com/open-trade/pulsectl" }
async-process = "1.3"
mouce = { git="https://github.com/janus/mouce.git" }
evdev = { git="https://github.com/fufesou/evdev" }
dbus = "0.9"
dbus-crossroads = "0.5"
tokio-tungstenite = { version = "^0.17.2", features = ["native-tls-vendored"] }
native-tls = { version = "0.2.10", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
jni = "0.19"
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
flutter_rust_bridge = { git = "https://github.com/SoLongAndThanksForAllThePizza/flutter_rust_bridge" }

[workspace]
members = ["libs/scrap", "libs/hbb_common", "libs/enigo", "libs/clipboard", "libs/virtual_display", "libs/turn", "libs/simple_rc"]

[package.metadata.winres]
LegalCopyright = "Changes copyright © 2022 Begonia Holdings.  Copyright © 2022 Purslane, Inc."
# this FileDescription overrides package.description
FileDescription = "HopToDesk"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt" ] }
static_vcruntime = "2.0"

[build-dependencies]
cc = "1.0"
hbb_common = { path = "libs/hbb_common" }
simple_rc = { path = "libs/simple_rc", optional = true }
flutter_rust_bridge_codegen = { git = "https://github.com/SoLongAndThanksForAllThePizza/flutter_rust_bridge" }

[dev-dependencies]
hound = "3.5"

[package.metadata.bundle]
name = "HopToDesk"
identifier = "com.hoptodesk.hoptodesk"
icon = ["res/32x32.png", "res/128x128.png", "res/128x128@2x.png"]
deb_depends = ["libgtk-3-0", "libxcb-randr0", "libxdo3", "libxfixes3", "libxcb-shape0", "libxcb-xfixes0", "libasound2", "libsystemd0", "curl", "pipewire"]
osx_frameworks = ["libsciter"]
osx_minimum_system_version = "10.14"
resources = ["res/mac-tray.png"]

#https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 256
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
